# naro

android/: .gitignore  AndroidManifest.xml  build.xml  changelog  custom_rules.xml  project.properties
android/res/drawable/: ic_action_battery.xml  ic_action_connect.xml  ic_action_cylinder.xml  img_gallery.xml
android/res/layout/: activity_main.xml  main_activity.xml
android/res/menu/: main_actions.xml  main_menu.xml
android/res/values/: arrays.xml  attrs.xml  strings.xml  styles.xml
android/res/xml/: preference_headers.xml  preferences.xml  preferences_connection.xml  preferences_controls.xml  preferences_platform.xml
benchmark/: CMakeLists.txt  changelog
init/: CMakeLists.txt  changelog
init/conf/: CMakeLists.txt  blinkm-server  depth-sensor  diagnostic-aggregator  dive-controller  fin-controller  joy-command  joy-control  led-controller  roscore  smc-server  system-monitors  usc-server
init/debian/: postinst  postrm  prerm
matlab/: Nanins_Controller_LQR.slx  Nanins_Controller_PID.slx  Nanins_LQR_Controller.slx  Nanins_PID_Controller.slx  Nanins_PID_Controller.slx.r2014b  Nanins_calcLQRgain.m  Nanins_parameters.m  Nanins_plotBagFiles.m  Nanins_simulateSystem.m  calcLQRgain.m  parameters.m  params.m  plotBagFiles.m  plotBagFiles.m~  plotNanins.m  plotPitchBagFile.m  plot_Simulation_Test.m  simulateModel.m  simulateSystem.m  simulation.slx  simulation2.slx  simulation2.slx.r2014b  simulation2_sfun.mexmaci64  simulation_lqr.slx  simulation_lqr.slx.r2014b  simulation_lqr_sfun.mexmaci64  simulation_sfun.mexmaci64  solution1_sfun.mexmaci64  systemDynamics.m
matlab/slprj/_jitprj/: s0bDAPk2uKKQ2acXs9sa3MC.l  s0bDAPk2uKKQ2acXs9sa3MC.mat  s2sRM54uk88IBMGicnJVGfD.l  s2sRM54uk88IBMGicnJVGfD.mat  s6vLzgaCpmT7nrSpvdyt4QD.l  s6vLzgaCpmT7nrSpvdyt4QD.mat  s8Ry1QLZGSwIRiSLPNF2pdG.l  s8Ry1QLZGSwIRiSLPNF2pdG.mat  sCIWPswICpGgHN18hSAJM8B.mat  sCqL08HMQmWFRYuXOHvu4pE.l  sCqL08HMQmWFRYuXOHvu4pE.mat  sJfO0rAB6mFYsIZZpN1Ezd.l  sJfO0rAB6mFYsIZZpN1Ezd.mat  sOE3vk69y9cnOqrwxByLqyE.l  sOE3vk69y9cnOqrwxByLqyE.mat  sQJr2eyvwiMZlR32uUstgdB.l  sQJr2eyvwiMZlR32uUstgdB.mat  sWBECNMKShjwNoMy87qLJgE.l  sWBECNMKShjwNoMy87qLJgE.mat  sWfxg19NVF6MeYVbCPHfnSF.l  sWfxg19NVF6MeYVbCPHfnSF.mat  scuy7Uf6EzQZ8AgHWn4olbF.l  scuy7Uf6EzQZ8AgHWn4olbF.mat  seXdsMmvCpxaZ8lSg3pGHhF.l  seXdsMmvCpxaZ8lSg3pGHhF.mat  slI8WBuzJs4IEAr2W8rU0h.l  slI8WBuzJs4IEAr2W8rU0h.mat  spBKo2L7SQkkFtIrJd8PqZC.mat  st90RQavFOMbA5IZfxO9TuG.l  st90RQavFOMbA5IZfxO9TuG.mat  swJB5sRDRzb9oidUiPuaM8.mat  sy8qsTdUDj8Y2CfTZcx0nbG.mat  syE7xRiR69I0boG141WJAkC.mat
modules/: CMakeLists.txt  changelog  copyright
modules/debian/: postinst  prerm
modules/src/: CMakeLists.txt
ros/: .project  CMakeLists.txt  changelog
ros/conf/: ros.conf.remake
ros/naro/: CMakeLists.txt  package.xml
ros/naro_blinkm_srvs/: CMakeLists.txt  package.xml
ros/naro_cmd_srvs/: CMakeLists.txt  package.xml
ros/naro_cmd_srvs/config/: joy_recorder.yaml
ros/naro_cmd_srvs/launch/: joy_command.launch  joy_recorder.launch
ros/naro_cmd_srvs/msg/: Coefficient.msg  Commands.msg
ros/naro_cmd_srvs/srv/: Connect.srv  Disconnect.srv  GetActuators.srv  GetCoefficient.srv  GetCoefficients.srv  GetFin.srv  GetOutputChannel.srv  SetActuators.srv  SetCoefficient.srv  SetCoefficients.srv  Stop.srv
ros/naro_diagnostics/: CMakeLists.txt  package.xml
ros/naro_diagnostics/config/: hdd_monitor.yaml
ros/naro_diagnostics/launch/: aggregator.launch  system_monitors.launch
ros/naro_diagnostics/scripts/: cpu_monitor.py
ros/naro_dive_ctrl/: CMakeLists.txt  CMakeLists_old.txt  package.xml
ros/naro_dive_ctrl/config/: dive_controller_new.yaml  dive_controller_old.yaml
ros/naro_dive_ctrl/include/naro_dive_ctrl/: DiveController.h  PIDController.h
ros/naro_dive_ctrl/launch/: dive_controller.launch
ros/naro_dive_ctrl/src/: DiveController.cpp  LoggingClass.cpp  PIDController.cpp  diveController_node.cpp
ros/naro_dive_ctrl/srv/: Enable.srv  EnableLQRCtrl.srv  GetGains.srv  GetRefDepth.srv  GetRefPitch.srv  SetDepth.srv  SetGains.srv  SetPitch.srv  SetRefState.srv  SetTankPos.srv
ros/naro_dive_ctrl/srv_old/: SetGains.srv
ros/naro_fin_ctrl/: CMakeLists.txt  package.xml
ros/naro_imu/: CMakeLists.txt  package.xml
ros/naro_imu/include/naro_imu/: NaroImu.h  TestNode.h
ros/naro_imu/launch/: naro_imu.launch
ros/naro_imu/src/: NaroImu.cpp  TestNode.cpp  naro_imu_start.cpp  test_node.cpp
ros/naro_imu/srv/: GetPitch.srv  GetState.srv
ros/naro_led_ctrl/: CMakeLists.txt  package.xml
ros/naro_monitoring/: CMakeLists.txt  package.xml
ros/naro_rviz/: CMakeLists.txt  package.xml
ros/naro_rviz/config/: naro_rviz.rviz
ros/naro_rviz/launch/: naro_rviz.launch
ros/naro_sensor_srvs/: CMakeLists.txt  CMakeLists_old.txt  package.xml
ros/naro_sensor_srvs/config/: hallSensor_front.yaml  hallSensor_rear.yaml
ros/naro_sensor_srvs/include/naro_sensor_srvs/: HallSensor.h  HallSensorNode.h
ros/naro_sensor_srvs/launch/: depth_sensor.launch  hall_sensors.launch
ros/naro_sensor_srvs/src/: GPIOClass.cpp  HallSensor.cpp  HallSensorNode.cpp  hall_sensor.cpp
ros/naro_sensor_srvs/srv/: GetElevation.srv  GetFrequency.srv  GetPosition.srv  GetPressure.srv  SetFrequency.srv
ros/naro_smc_srvs/: CMakeLists.txt  package.xml
ros/naro_tank_ctrl/: CMakeLists.txt  package.xml
ros/naro_tank_ctrl/config/: tank_front.yaml  tank_rear.yaml
ros/naro_tank_ctrl/include/naro_tank_ctrl/: TankCtrl.h  TankPosition.h
ros/naro_tank_ctrl/launch/: tank_ctrl.launch  testLaunch.launch
ros/naro_tank_ctrl/src/: TankCtrl.cpp  TankPosition.cpp  tank_ctrl.cpp  tank_pos.cpp
ros/naro_tank_ctrl/srv/: SetDirection.srv  SetTankPosition.srv
ros/naro_test/: CMakeLists.txt  package.xml
ros/naro_tf/: CMakeLists.txt  package.xml
ros/naro_tf/launch/: naro_tf.launch  naro_tf_static.launch
ros/naro_tf/src/: IMUFrame_tf_broadcaster.cpp  IMUFrame_tf_listener.cpp  baseFrame_tf_broadcaster.cpp  test.cpp
ros/naro_usc_srvs/: CMakeLists.txt  package.xml
ros/src/: CMakeLists.txt
sandbox/: changelog
udev/: CMakeLists.txt  changelog
udev/rules/: 50-naro-i2c.rules  50-naro-usb.rules  CMakeLists.txt
(+335 files in other folders)
