<?xml version="1.0"?>
<package>
  <name>naro</name>
  <version>0.1.0</version>
  <description>
    ROS integration for the Naro Nanins
  </description>

  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>naro_blinkm_srvs</run_depend>
  <run_depend>naro_cmd_srvs</run_depend>
  <run_depend>naro_diagnostics</run_depend>
  <run_depend>naro_dive_ctrl</run_depend>
  <run_depend>naro_fin_ctrl</run_depend>
  <run_depend>naro_led_ctrl</run_depend>
  <run_depend>naro_sensor_srvs</run_depend>
  <run_depend>naro_smc_srvs</run_depend>
  <run_depend>naro_test</run_depend>
  <run_depend>naro_usc_srvs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
