<?xml version="1.0"?>
<package>
  <name>naro_tank_ctrl</name>
  <version>0.0.0</version>
  <description>The naro_tank_ctrl package</description>

  <maintainer email="jo.eichenberger@gmail.com">Jonas Eichenberger</maintainer>

  <license>GNU Lesser General Public License (LGPL)</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>naro_sensor_srvs</build_depend>
  <build_depend>naro_smc_srvs</build_depend>
  <build_depend>roscpp_nodewrap</build_depend>
  <build_depend>naro_monitoring</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>naro_sensor_srvs</run_depend>
  <run_depend>naro_smc_srvs</run_depend>
  <run_depend>naro_monitoring</run_depend>
  <run_depend>roscpp_nodewrap</run_depend>

</package>